# Smart

./: .gitignore  AGENTS.md  ANSWER_QUALITY_UPGRADE_PLAN.md  CONTEXT_MANAGEMENT_PLAN.md  CTempreview_diff.txt  GUID_ERP.md  PROGRESS_BAR_FIX_PLAN.md  QA_AI.md  TTS_FEATURE_PLAN.md  VOICE_PROCESSING_PLAN.md  diff.txt  gen_cols.py  opencode.json
ai_python/: .env.example  .gitignore  README.md  RUN.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
ai_python/AGENTS/: AGENT_REGISTRY.md  AI_BA_AGENT_INSTRUCTIONS.md  AI_BRIDGE_AGENT_INSTRUCTIONS.md  AI_BUG_INVESTIGATOR_AGENT_INSTRUCTIONS.md  AI_CODE_REVIEWER_AGENT_INSTRUCTIONS.md  AI_DEVELOPER_AGENT_INSTRUCTIONS.md  AI_DOC_SYNC_AGENT_INSTRUCTIONS.md  AI_ORCHESTRATOR_AGENT_INSTRUCTIONS.md  AI_PLANNER_AGENT_INSTRUCTIONS.md  AI_PM_AGENT_INSTRUCTIONS.md  AI_TECH_LEAD_AGENT_INSTRUCTIONS.md  AI_TESTER_AGENT_INSTRUCTIONS.md  WORKFLOW_RULE.md
ai_python/TASKS/: Task001.md  Task003.md  Task004.md  Task005.md  Task006.md
ai_python/app/: TASK005_README.md  __init__.py  logging_setup.py  main.py  mkp_async.py  mkp_client.py  observability.py
ai_python/scripts/: build_erp_domain_index.py  eval_golden.py  fpt_openai_stream_example.py  fpt_whisper_transcribe_example.py  run-dev.ps1  run-dev.sh  smoke-harness.ps1
ai_python/tests/: conftest.py  fake_llm.py  test_agent_prompts.py  test_agentic_integration.py  test_agents.py  test_analyze_empty_result.py  test_answer_composer.py  test_answer_quality.py  test_anti_injection.py  test_api_sse.py  test_api_synthesize.py  test_api_task004.py  test_api_transcribe.py  (+106 more)
(+1571 files in other folders)
